--- a/index.html
+++ b/index.html
@@ -94,8 +94,14 @@
   </div>
 
   <footer>
-
-
+    <div class="footer-logo">DTS C02</div>
+    <div class="copyright">Copyright ⓒ 2021 | DTS Batch 1c</div>
+    <div class="follow">Follow Us on</div>
+    <div class="icons">
+      <a href="#" class="yt"><img src="assets/images/yt.png" alt=""></a>
+      <a href="#" class="ig"><img src="assets/images/ig.png" alt=""></a>
+      <a href="#" class="fb"><img src="assets/images/fb.png" alt=""></a>
+    </div>
   </footer>
 </body>
 
